--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.8",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0"
+    "react-circular-progressbar": "^2.2.0",
+    "react-dom": "^19.1.0",
+    "react-tsparticles": "^2.12.2",
+    "three": "^0.177.0",
+    "tippy.js": "^6.3.7",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
