--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "react-tsparticles": "^2.12.2",
     "three": "^0.177.0",
     "tippy.js": "^6.3.7",
